tests/core/data/csl/InterfaceTests/InvalidDeclarations/inexistentRaisedException.csl
// Method declaration has a inexistent raised exception
interface inexistentRaisedException
{
	string Foo(in string fooMe) 
	raises IDontExist;

};


